--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -19,34 +19,32 @@
 
 <section>
     <h2>  Your search results for: <%= searchTerm %>  </h2>
-    <div class="wrapper">
-    
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    
-    </div>
-    
+   
     <% if(movies){ %>
         <ol>
             <% movies.forEach(function(movie){ %>
             <li>
-                <%= movie["Title"] %> <br>
+                <div>
                 <% if(movie['Poster'] !== "N/A") { %>
                     <img src=" <%= movie['Poster'] %> " alt="image">
-                <% }else{ %>
-                    <img src="http://i.ebayimg.com/images/i/190349612320-0-1/s-l1000.jpg" alt="Image Missing">
-                <% } %>
+                    <% }else{ %>
+                        <img src="http://i.ebayimg.com/images/i/190349612320-0-1/s-l1000.jpg" alt="Image Missing">
+                    <% } %>
+                    
+                </div>
+                <div>
+                    <p class="headline"> <%= movie["Title"] %> </p> 
+                </div>
             </li> 
             <% }) %>
         </ol>
         
     <% }else{ %>
-            <p>Nuthin found...</p>
+            <p class="headline">Nuthin found...</p>
     <% } %>
 </section>
 
-<% include partials/footer %>
+<footer>
+    <% include partials/footer %>
+</footer>
 
