--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,14 @@
+<footer>
+    <div>
+        <a href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
+    </div>
 
+  <div>
     <p class="footer">T-nane &COPY; 2018</p>
+  </div>
+
+</footer>
+  <script
+  src="/js/lib/jquery-3.3.1.min.js"></script>
 </body>
 </html>
