--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,12 +1,21 @@
-body{
+html, body{
+    top: 0;
+    width: 100%;
+    /* background-image: url(https://www.wallpaperink.co.uk/gallery/shutterstock/Film/Custom_Wallpaper_Clear_Silver3171788647.jpg);
+    background-size: cover; */
     margin: 0;
     background-color: rgb(255, 255, 255);
-    max-height: 100%;
-    font-family: 'Comfortaa', cursive;
-    
+    font-family: 'Comfortaa', cursive;   
 }
 
-header{
+h1{
+    margin: 0;
+}
+
+header, .header-homepage{
+    top: 0;
+    width: 100%;
+    position: fixed;
     font-family: 'Montserrat', sans-serif;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -24,8 +33,16 @@ header > div{
     justify-self: center;
 }
 
+.header-homepage > div{
+    padding: 0.5em;
+    color: rgb(0, 0, 0);
+    justify-self: center;
+    text-transform: capitalize;
+}
+
+
 input{
-    background-color: white;
+    background-color: rgb(221, 221, 221);
     height: 30px;
     line-height: 30px;
     padding-left: 0.5em; 
@@ -33,6 +50,13 @@ input{
     border: 1px solid black;
     border-radius: 10px;
     text-transform: capitalize;
+}
+
+
+input:focus{
+    border: 1px solid blue;
+    box-shadow: 0 0 1px 1px blue;
+    background-color: white;
 }
 
 button{
@@ -44,26 +68,35 @@ button{
     background: none;
     border: none;
     outline:none;
+    font-size: 1.5em;
 }
 
 a{
     height: 30px;
     line-height: 30px;
+    font-size: 1.5em;
     color: rgb(0, 0, 0);
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-weight: bold;
 }
 
 a:hover, button:hover{
+    text-shadow: 0 0 1px rgb(69, 255, 13);
     color: blue;
     text-decoration: underline;
+    font-size: 1.6em;
 }
 
-section{
-    padding: 1em;
-    margin: 10px;
-    margin-right: 0;
+section, .section-homepage{
+    text-align: center;
+    width: 90%;
+    padding: 60px 0;
+}
+
+.section-homepage{
+    margin-top: 10em;
+    margin: 0 auto;
 }
 
 h2{
@@ -81,7 +114,8 @@ ol{
 }
 
 li{
-    height: 210px;
+    /* height: auto; */
+    padding: 15px;
     display: grid;
     grid-template-columns: 1fr 2fr;
     background-color: rgb(255, 255, 255);
@@ -90,19 +124,40 @@ li{
 
 li > div:nth-child(even){
     padding: .5em;
-    font-size: .8em;
-    font-weight: 700;
 }
 
 img{
-    width: auto;
-    height: 210px;
+    width: 120px;
+    height: auto;
 }
 
 p.headline{
-    font-size: 1.2em;
-    margin-top:0;
-    text-transform: capitalize;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    padding: .5em;
+    font-size: .6em;
+    font-weight: 700;
+    text-align: start;
+}
+
+footer{
+    justify-content:flex-end; 
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2em;
+    text-align: center;
+    width: 100%;
+    height: 4%;
+    line-height: 4%;
+    background-color:rgb(255, 255, 255);
+    position: fixed;
+    bottom: 0;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 1);
+}
+
+footer >div{
+    justify-self: end;
+}
+
+footer >div:nth-of-type(2){
+    justify-self: start;
 }
