--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheets/app.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700|Montserrat:900" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>
        <%= title %> 
     </title>
