--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -34,6 +34,8 @@
                 </div>
                 <div>
                     <p class="headline"> <%= movie["Title"] %> </p> 
+                    <p class="more"> <%= movie["Year"] %> </p> 
+                    <p class="more"> <%= movie["Title"] %> </p> 
                 </div>
             </li> 
             <% }) %>
