--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,5 +1,9 @@
 <% include partials/header %>
 
-<h1>404. That's an error</h1>
+<section>
+    <h1 id="error-page">404. That's an error.</h1>
+    <a id="home-error" href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
+</section>
+
 
 <% include partials/footer %>
