--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -2,18 +2,23 @@
 
 
 <div class="header-homepage">
-    <div></div>
-
     <div>
-        <h1> <i class="fa fa-video-camera" aria-hidden="true"></i> t8s omdb  </h1>
+        <h1> <i class="fa fa-video-camera" aria-hidden="true"></i>  </h1>
     </div>
 
-    <div></div>
+    <div class="end-box">
+            <a href="#"> <i class="fa fa-user" aria-hidden="true"></i> </a>
+            <a href="#"> <i class="fa fa-user-plus" aria-hidden="true"></i> </a>
+    </div>
 </div>
 
 <section class="section-homepage">
+
+    <h1> <span class="t8"> t-nane's</span><span class="omdb">Omdb</span> </h1>
+
+
     <form action="/searchdb" method="GET">
-        <input type="text" placeholder="Enter movie title " name="search">
+        <input type="text" placeholder="Which movie are you looking to find?" name="search"> <br>
         <button> <i class="fa fa-search" aria-hidden="true"></i> </button>
     </form>
     <p>Search from thousands of movies in our database!</p>
